2000-07-12  Michael Meeks  <michael@helixcode.com>

	* container.c (sample_app_shutdown): unref the ui_handler.
	(main): hook in & add obejct_shutdown (sample_app_remove_component):
	remove ourselfs from the container

2000-07-10  Michael Meeks  <michael@helixcode.com>

	* component.c (component_del): unref the client site too.

	* container.c (sample_app_create): bump init size.

2000-07-06  Michael Meeks  <michael@helixcode.com>

	* container-io.c (save_component): unref the sub directory.

	* component.c: re-order to kill ugly prototypes.

	* container.c (sample_app_exit): unref not destroy container.

	* container-io.c (save_component): release the stream.
	(load_component_id): unref stream.
	(open_stream): remove; use CORBA interface instead.
	(sample_container_save): unref storage after use.

	* component-io.c: Totaly re-stucture, fix exception handling and
	the mess with CORBA_Environments.

	* component-io.h: update.

2000-07-05  Michael Meeks  <michael@helixcode.com>

	* component-io.c (component_save_id): use write_string as you should.

2000-07-03  Michael Meeks  <michael@helixcode.com>

	* container-io.c (load_component_id_stream_read): update.

2000-06-28  Michael Meeks  <michael@helixcode.com>

	* container-menu.c (sample_app_file_menu): add a placeholder.

2000-06-26  Michael Meeks  <michael@helixcode.com>

	* container-io.c (save_component): close the streams after opening
	them [ duh ].

2000-06-24  Michael Meeks  <michael@helixcode.com>

	* container-io.c (sample_container_save): simplify logic.

	* component-io.c (component_load): add check on stream.

	* container-io.c: kill redundant prototypes.
	(open_stream): add mode flag.
	(create_stream, load_component_id ,load_component): use it.
	(load_component): free the id.
	(load_component_id_stream_read): re-write.
	(load_component_id): robustify.

2000-06-24  Michael Meeks  <michael@helixcode.com>

	* container-io.c (save_component): make it more robust.
