@@ -1,3 +1,10 @@
+2000-07-13  Michael Meeks  <michael@helixcode.com>
+
+	* container-print.c (sample_app_print_preview): kill unref of print
+	preview widget.
+
+	* component.c (load_stream_cb): update to show exception nicely.
+
 2000-07-12  Michael Meeks  <michael@helixcode.com>
 
 	* container.c (sample_app_shutdown): unref the ui_handler.
